2.0 -> 1/16/2024
Added:
  - nncards can now be compiled with a desired version through the
    nncards_version variable. For example:
      make nncards_version=2.0-1+deb12u1
  - Added long options alongside the short options:
    -r has --random
    -t has --terms-first
    -h has --help
    -v has --version
  - Manual includes a sample card file.
  - nncards can now accept multiple card files as arguments. The cards from each
    file are combined together.

Changes:
  - Removed install-doc.
  - Redid Makefile, based off of the text editor mle's Makefile. Now supports
    custom LDFLAGS.
  - Updated termbox.h to termbox2.h.
  - Clearer error messages.
  - Now returns 0 on success and 1 on error.
  - Can now completely read lines longer than 1024 characters.
  - Info bar now displays given paths again rather just file names.

Removed:
 - -c option.

1.0 -> 2.0 (10/28/2023)
Added:
  - More key controls:
      Right Arrow, l: Next card
      Left Arrow, j: Previous card
      Space, Up/Down Arrow: Flip card
      Page Up: First card
      Page Down: Last card
      Escape: Quit nncards
  - -c option: Start at nth card (n being the given integer)

Changes: 
  - Cards are now stored on heap rather than stack.
  - There is no longer a 254 character limit on terms/definitions.
  - Default make install PREFIX is now /usr/local instead of /usr.
  - The info bar now only shows the card file name, rather than its given path.
  - nncards will specify which line it cannot parse, if it encounters one.
  - If no argument is passed, nncards prints help message.

Fixes:
  - Replace any tabs in the term/definition with spaces, as tabs cause the TUI
    rendering to mess up.
  - Text is cut short if some of its lines would be printed outside the card's
    border.