@@ -6,7 +6,7 @@
 .Nd TUI flashcard program
 .Sh SYNOPSIS
 .Nm nncards
-.Op Fl trhv
+.Op Fl trhuv
 .Op Fl c Ar number
 .Ar FILE...
 .Sh DESCRIPTION
@@ -69,6 +69,8 @@ Randomize the order the cards appear in.
 Show terms first rather than definitions.
 .It Fl h, Fl \-help
 Print help message.
+.It Fl u, Fl \-usage
+Print usage message.
 .It Fl v, Fl \-version
 Print
 .Nm
